--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
 				"test": "jest",
 				"test:watch": "jest --watchAll",
 				"test:coverage": "jest --coverage",
-				"dev": "ts-node-dev --respawn --clear --transpile-only --ignore-watch node_modules ./src/server.ts",
-				"build": "yarn test && rimraf ./dist && tsc",
-				"start": "node dist/app.js"
+				"dev": "nodemon --watch 'src/' --exec 'ts-node src/server.ts' -e ts"
 		},
 		"dependencies": {
 				"@google/generative-ai": "^0.17.0",
 				"csv-writer": "^1.6.0",
 				"dotenv": "^16.4.5",
+				"express": "^4.19.2",
+				"multer": "^1.4.5-lts.1",
 				"pdf-parse": "^1.1.1",
 				"prompt-sync": "^4.2.0",
 				"wordcount": "^1.1.1"
@@ -24,6 +24,7 @@
 				"@types/compression": "^1.7.5",
 				"@types/express": "^4.17.21",
 				"@types/jest": "^29.5.12",
+				"@types/multer": "^1.4.11",
 				"@types/node": "^20.12.2",
 				"@types/pdf-parse": "^1.1.4",
 				"@types/prompt-sync": "^4.2.3",
@@ -37,6 +38,7 @@
 				"eslint-plugin-prettier": "^5.1.3",
 				"eslint-plugin-promise": "^6.0.0",
 				"jest": "^29.7.0",
+				"nodemon": "^3.1.4",
 				"prettier": "^3.2.5",
 				"rimraf": "^5.0.5",
 				"supertest": "^7.0.0",
