--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
 		"sourceType": "module",
 		"project": "./tsconfig.json"
 	},
-	"ignorePatterns": ["src/**/*.test.ts"],
+	"ignorePatterns": [""],
 	"rules": {
 		"prettier/prettier": "error",
 		"camelcase": "error",
