--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"],
+	"exclude": ["node_modules", "**/*.spec.ts"],
 	"include": ["src/**/*.ts"],
 	"compilerOptions": {
 		"types": ["node", "jest"],
