--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		},
 		"dependencies": {
 				"@google/generative-ai": "^0.17.0",
+				"cors": "^2.8.5",
 				"csv-writer": "^1.6.0",
 				"dotenv": "^16.4.5",
 				"express": "^4.19.2",
@@ -22,6 +23,7 @@
 		},
 		"devDependencies": {
 				"@types/compression": "^1.7.5",
+				"@types/cors": "^2.8.17",
 				"@types/express": "^4.17.21",
 				"@types/jest": "^29.5.12",
 				"@types/multer": "^1.4.11",
